k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popquiz-langchain
  namespace: popquiz
  labels:
    app: popquiz-langchain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popquiz-langchain
  template:
    metadata:
      labels:
        app: popquiz-langchain
    spec:
      containers:
        - name: langchain
          image: abhaytopno/popquiz-langchain:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: '100m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popquiz-backend
  namespace: popquiz
  labels:
    app: popquiz-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popquiz-backend
  template:
    metadata:
      labels:
        app: popquiz-backend
    spec:
      containers:
        - name: backend
          image: abhaytopno/popquiz-backend:v12
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popquiz-frontend
  namespace: popquiz
  labels:
    app: popquiz-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: popquiz-frontend
  template:
    metadata:
      labels:
        app: popquiz-frontend
    spec:
      containers:
        - name: frontend
          image: abhaytopno/popquiz-frontend:v12
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
