k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: popquiz-langchain
  namespace: popquiz
spec:
  selector:
    app: popquiz-langchain
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-backend
  namespace: popquiz
spec:
  selector:
    app: popquiz-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: popquiz-frontend
  namespace: popquiz
spec:
  selector:
    app: popquiz-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
