k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: popquiz-ingress
  namespace: popquiz
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/use-forwarded-headers: 'true'
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: 'true'
    nginx.ingress.kubernetes.io/upstream-hash-by: '$http_upgrade'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: popquiz-backend
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: popquiz-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: popquiz-frontend
                port:
                  number: 80
